# rifdock_v4.2

./: .gitignore  .gitmodules  CMakeLists.txt  cst_file_example.cst  scheme.sublime-project
apps/: CMakeLists.txt
apps/rosetta/: CMakeLists.txt  rif_dock_test.cc  rif_dock_test.hh  rifgen.cc  scheme_make_bounding_grids.cc  test_librosetta.cc  test_longxing.cc
apps/rosetta/python/: CMakeLists.txt
apps/rosetta/python/pysetta/: CMakeLists.txt  _pysetta_core_import_pose.cc  _pysetta_core_pose.cc  _pysetta_devel.cc
apps/rosetta/python/pysetta/core/import_pose/: __init__.py
apps/rosetta/python/pysetta/core/pose/: __init__.py
apps/rosetta/python/pysetta/devel/: __init__.py
apps/rosetta/python/test/: CMakeLists.txt  example.py  test_pybind.cc
apps/rosetta/riflib/: CMakeLists.txt  EtableParams_init.cc  EtableParams_init.hh  HBondedPairGenerator.cc  HBondedPairGenerator.hh  RifBase.hh  RifFactory.cc  RifFactory.hh  RotamerGenerator.cc  RotamerGenerator.hh  rosetta_field.cc  rosetta_field.hh  rotamer_energy_tables.cc  rotamer_energy_tables.hh  types.hh  util.cc  util.hh
apps/rosetta/riflib/rif/: RifAccumulators.hh  RifGenerator.hh  RifGeneratorApoHSearch.cc  RifGeneratorApoHSearch.hh  RifGeneratorSimpleHbonds.cc  RifGeneratorSimpleHbonds.hh  RifGeneratorUserHotspots.cc  RifGeneratorUserHotspots.hh  make_hbond_geometries.cc  make_hbond_geometries.hh
doc/: conda_setup.txt  conf.py  index.rst
dox/: Doxyfile
ide/: scheme.sublime-project
ide/Scheme.xcodeproj/: project.pbxproj
ide/Scheme.xcodeproj/xcuserdata/sheffler.xcuserdatad/xcschemes/: Scheme.xcscheme  main_test.xcscheme  quick_test.xcscheme  xcschememanagement.plist
schemelib/scheme/chemical/: stub.hh
schemelib/scheme/nest/: MultiNest.hh
schemelib/scheme/numeric/: bcc_lattice.gtest.cc  cube_to_sphere.gtest.cc  xform_perf.gtest.cc
schemelib/scheme/objective/hash/: XformHash.gtest.cc  XformHashNeighbors.gtest.cc  XformMap.gtest.cc  XformMap.hh
schemelib/scheme/objective/storage/: TwoBodyTable.hh
schemelib/test/: CMakeLists.txt  quick_test.cc
